tweak design and add logic for user tech
