# internal/goa/service/resume/design/types/user_tech.go
@@ -17,17 +17,12 @@ var RTUserTech = ResultType("application/vnd.usertech+json", func() {
 
 	Reference(PayloadUserTech)
 
-	//`id`         int(11) NOT NULL AUTO_INCREMENT COMMENT'ID',
-	//`user_id`    int(11) COLLATE utf8_unicode_ci NOT NULL COMMENT'User ID',
-	//`tech_id`    int(11) COLLATE utf8_unicode_ci NOT NULL COMMENT'Tech ID',
-	//`name`       varchar(40) COLLATE utf8_unicode_ci NOT NULL COMMENT'Tech Name',
-
 	Attributes(func() {
 		Attribute("id", Int, "Tech ID", fieldID)
 		Attribute("tech_name")
 
 		// Required adds a "required" validation to the attribute.
-		Required("tech_name")
+		//Required("tech_name")
 	})
 
 	View("default", func() {
@@ -35,8 +30,8 @@ var RTUserTech = ResultType("application/vnd.usertech+json", func() {
 		Attribute("tech_name")
 	})
 
-	View("tech", func() {
-		Description("id is the view used for C U D")
+	View("techName", func() {
+		Description("only tech name")
 		Attribute("tech_name")
 	})
 })
