# internal/goa/service/resume/gen/http/openapi3.yaml
@@ -682,7 +682,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                description: 'Response body may alternatively be #/components/schemas/UsertechResponseTechCollection'
+                                description: 'Response body may alternatively be #/components/schemas/UsertechResponseTechNameCollection'
                                 $ref: '#/components/schemas/UsertechCollection'
                             example:
                                 - id: 10
@@ -726,7 +726,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                description: 'Response body may alternatively be #/components/schemas/UsertechResponseTechCollection'
+                                description: 'Response body may alternatively be #/components/schemas/UsertechResponseTechNameCollection'
                                 $ref: '#/components/schemas/UsertechCollection'
                             example:
                                 - id: 10
@@ -772,20 +772,20 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/UserworkhistoryCollection'
                             example:
-                                - company: Company
-                                  country: nl
+                                - company_name: Company
+                                  country_name: nl
                                   description: '["Developed resume site for job seeking."]'
                                   techs: '["Golang with goa", "Riot.js", "Semantic UI", "MySQL", "Docker", "Travis-CI"]'
                                   term: Jul 2017 - Aug 2017
                                   title: Developer
-                                - company: Company
-                                  country: nl
+                                - company_name: Company
+                                  country_name: nl
                                   description: '["Developed resume site for job seeking."]'
                                   techs: '["Golang with goa", "Riot.js", "Semantic UI", "MySQL", "Docker", "Travis-CI"]'
                                   term: Jul 2017 - Aug 2017
                                   title: Developer
-                                - company: Company
-                                  country: nl
+                                - company_name: Company
+                                  country_name: nl
                                   description: '["Developed resume site for job seeking."]'
                                   techs: '["Golang with goa", "Riot.js", "Semantic UI", "MySQL", "Docker", "Travis-CI"]'
                                   term: Jul 2017 - Aug 2017
@@ -1278,8 +1278,6 @@ components:
             example:
                 id: 10
                 tech_name: Golang
-            required:
-                - tech_name
         UsertechCollection:
             type: array
             items:
@@ -1291,7 +1289,7 @@ components:
                   tech_name: Golang
                 - id: 10
                   tech_name: Golang
-        UsertechResponseTech:
+        UsertechResponseTechName:
             type: object
             properties:
                 tech_name:
@@ -1300,16 +1298,14 @@ components:
                     example: Golang
                     minLength: 1
                     maxLength: 40
-            description: A user information (tech view)
+            description: A user information (techName view)
             example:
                 tech_name: Golang
-            required:
-                - tech_name
-        UsertechResponseTechCollection:
+        UsertechResponseTechNameCollection:
             type: array
             items:
-                $ref: '#/components/schemas/UsertechResponseTech'
-            description: GetUserLikeTechResponseBody is the result type for an array of UsertechResponse (tech view)
+                $ref: '#/components/schemas/UsertechResponseTechName'
+            description: GetUserLikeTechResponseBody is the result type for an array of UsertechResponse (techName view)
             example:
                 - tech_name: Golang
                 - tech_name: Golang
@@ -1318,13 +1314,13 @@ components:
         Userworkhistory:
             type: object
             properties:
-                company:
+                company_name:
                     type: string
                     description: Company name
                     example: Company
                     minLength: 2
                     maxLength: 40
-                country:
+                country_name:
                     type: string
                     description: Country code
                     example: nl
@@ -1354,29 +1350,25 @@ components:
                     maxLength: 40
             description: A user information
             example:
-                company: Company
-                country: nl
+                company_name: Company
+                country_name: nl
                 description: '["Developed resume site for job seeking."]'
                 techs: '["Golang with goa", "Riot.js", "Semantic UI", "MySQL", "Docker", "Travis-CI"]'
                 term: Jul 2017 - Aug 2017
                 title: Developer
-            required:
-                - title
-                - company
-                - country
         UserworkhistoryCollection:
             type: array
             items:
                 $ref: '#/components/schemas/Userworkhistory'
             example:
-                - company: Company
-                  country: nl
+                - company_name: Company
+                  country_name: nl
                   description: '["Developed resume site for job seeking."]'
                   techs: '["Golang with goa", "Riot.js", "Semantic UI", "MySQL", "Docker", "Travis-CI"]'
                   term: Jul 2017 - Aug 2017
                   title: Developer
-                - company: Company
-                  country: nl
+                - company_name: Company
+                  country_name: nl
                   description: '["Developed resume site for job seeking."]'
                   techs: '["Golang with goa", "Riot.js", "Semantic UI", "MySQL", "Docker", "Travis-CI"]'
                   term: Jul 2017 - Aug 2017
